# FlexTele

./: .gitmodules  LICENSE  README.md  pyproject.toml
assets/isaac/objects/obejct_2/: socket.usd
assets/isaac/objects/obejct_2/configuration/: socket_base.usd  socket_physics.usd  socket_sensor.usd
assets/isaac/objects/object_0/: socket.usd
assets/isaac/objects/object_0/configuration/: socket_base.usd  socket_physics.usd  socket_sensor.usd
assets/isaac/objects/object_1/: socket.usd
assets/isaac/objects/object_1/configuration/: socket_base.usd  socket_physics.usd  socket_sensor.usd
assets/isaac/robots/g1-29dof-inspire-base-fix-usd/configuration/: g1_29dof_with_hand_rev_1_0_base.usd  g1_29dof_with_hand_rev_1_0_physics.usd
config/: pico_server.yaml
example/isaac_env/isaac_g1_factory_demo/: README.md
example/isaac_env/isaac_g1_factory_demo/scripts/: list_envs.py  random_agent.py  zero_agent.py
example/isaac_env/isaac_g1_factory_demo/scripts/rsl_rl/: play.py  train.py
example/isaac_env/isaac_g1_factory_demo/source/isaac_g1_factory_demo/: setup.py
example/isaac_env/isaac_g1_factory_demo/source/isaac_g1_factory_demo/config/: extension.toml
example/isaac_env/isaac_g1_factory_demo/teleoperation/: pico_record_demos.py  record.sh
script/: install_xrobotoolkit.sh  start_pico_server.py
src/pico/: __init__.py  common.py  pico_client.py  pico_server.py  utils.py
src/teleop/: isaac_teleop.py
tools/isaac_teleop_visualize/: web_isaac_image.py
tools/isaac_teleop_visualize/frontend/: app.js  index.html  styles.css
(+10 files in other folders)
