[project]
name = "flextele"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "eclipse-zenoh>=1.7.2",
    "loguru>=0.7.3",
    "loop-rate-limiters>=1.2.0",
    "pyyaml>=6.0.3",
    "scipy>=1.17.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
pico-server = [
    "pybind11",
    "setuptools"
]

pico-client = []

teleop = [
    "flextele[pico-client]"
]
